--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -74,6 +74,18 @@ and 00-abstract.Rmd since they are handled in the YAML above differently for the
 on chapters.
 -->
 
+```{r}
+nice_eq <- function(eqn = "y = mx + b", crossref = "line"){
+        cat(paste0("\n\\begin{equation}\n",
+          eqn,
+          "(\\#eq:", crossref, ")",
+          "\\end{equation}\\noindent"
+        )
+    )
+}
+```
+
+
 # Introduction {.unnumbered}
 
 This is an example of the issue I'm having. Here is an equation:
@@ -82,3 +94,9 @@ This is an example of the issue I'm having. Here is an equation:
   (\#eq:ergm),
 \end{equation}
 and this line should be indented because the .tex file has extra blank lines
+
+Using R function:
+```{r, echo=FALSE, results="asis"}
+nice_eq(eqn = "P(\\mathbf{Y} = \\mathbf{y}) = \\frac{e^{\\theta \\cdot g(\\mathbf{y})}}{C(\\theta, \\mathcal{Y})}", crossref = "ergm")
+```
+That works, but not very easily.
