--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -1,102 +1,18 @@
 ---
-author: 'Your R. Name'
-date: 'May 20xx'
-division: 'Mathematics and Natural Sciences'
-advisor: 'Advisor F. Name'
-#altadvisor: 'Your Other Advisor'
-# Delete line 6 if you only have one advisor
-department: 'Mathematics'
-title: 'My Final College Paper'
+title: Broken equations
 knit: "bookdown::render_book"
 site: bookdown::bookdown_site
-output: 
-  thesisdown::thesis_pdf: default
-#  thesisdown::thesis_gitbook: default
-#  thesisdown::thesis_word: default
-#  thesisdown::thesis_epub: default
-# If you are creating a PDF you'll need to write your preliminary content here or
-# use code similar to line 20 for the files.  If you are producing in a different
-# format than PDF, you can delete or ignore lines 20-31 in this YAML header.
-abstract: >
-  `r if(knitr:::is_latex_output()) paste(readLines("00-abstract.Rmd"), collapse = ' ')`
-# If you'd rather include the preliminary content in files instead of inline
-# like below, use a command like that for the abstract above.  Note that a tab is 
-# needed on the line after the >.
-acknowledgements: >
-  I want to thank a few people.
-dedication: >
-  You can have a dedication here if you wish. 
-preface: >
-  This is an example of a thesis setup to use the reed thesis document class
-  (for LaTeX) and the R bookdown package, in general.
-bibliography: bib/thesis.bib
-# Download your specific bibliography database file and refer to it in the line above.
-csl: csl/apa.csl
-# Download your specific csl file and refer to it in the line above.
-lot: true
-lof: true
-#space_between_paragraphs: true
-# Delete the # at the beginning of the previous line if you'd like
-# to have a blank new line between each paragraph
-#header-includes:
-#- \usepackage{tikz}
+output:
+  bookdown::pdf_book:
+    keep_tex: true
+header-includes:
+- \setlength{\parindent}{.5in}
 ---
-
-<!--
-Above is the YAML (YAML Ain't Markup Language) header that includes a lot of metadata used to produce the document.  Be careful with spacing in this header!
-
-If you'd prefer to not include a Dedication, for example, simply delete lines 17 and 18 above or add a # before them to comment them out.  If you have other LaTeX packages you would like to include, delete the # before header-includes and list the packages after hyphens on new lines.
-
-If you'd like to include a comment that won't be produced in your resulting file enclose it in a block like this.
--->
-
-<!--
-If you receive a duplicate label error after knitting, make sure to delete the thesis.Rmd file and then knit again.
--->
-
-```{r include_packages, include = FALSE}
-# This chunk ensures that the thesisdown package is
-# installed and loaded. This thesisdown package includes
-# the template files for the thesis.
-if(!require(devtools))
-  install.packages("devtools", repos = "http://cran.rstudio.com")
-if(!require(thesisdown))
-  devtools::install_github("ismayc/thesisdown")
-library(thesisdown)
-```
-
-<!-- You'll need to include the order that you'd like Rmd files to appear in the _bookdown.yml file for
-PDF files and also delete the # before rmd_files: there.  You'll want to not include 00(two-hyphens)prelim.Rmd
-and 00-abstract.Rmd since they are handled in the YAML above differently for the PDF version.
--->
-
-<!-- The {.unnumbered} option here means that the introduction will be "Chapter 0." You can also use {-} for no numbers
-on chapters.
--->
-
-```{r}
-nice_eq <- function(eqn = "y = mx + b", crossref = "line"){
-        cat(paste0("\n\\begin{equation}\n",
-          eqn,
-          "(\\#eq:", crossref, ")",
-          "\\end{equation}\\noindent"
-        )
-    )
-}
-```
-
-
-# Introduction {.unnumbered}
+# Introduction
 
 This is an example of the issue I'm having. Here is an equation:
 \begin{equation}
-  P(\mathbf{Y} = \mathbf{y}) = \frac{e^{\theta \cdot g(\mathbf{y})}}{C(\theta, \mathcal{Y})}
-  (\#eq:ergm),
+  y = mx + b
 \end{equation}
 and this line should be indented because the .tex file has extra blank lines
 
-Using R function:
-```{r, echo=FALSE, results="asis"}
-nice_eq(eqn = "P(\\mathbf{Y} = \\mathbf{y}) = \\frac{e^{\\theta \\cdot g(\\mathbf{y})}}{C(\\theta, \\mathcal{Y})}", crossref = "ergm")
-```
-That works, but not very easily.
